--- a/consolidated-screening-lists.yaml
+++ b/consolidated-screening-lists.yaml
@@ -40,6 +40,7 @@ paths:
             <br />
             Department of Treasury - Office of Foreign Assets Control: <br />
             * <b>CAP</b> - Correspondent Account or Payable-Through Account Sanctions (CAPTA) <br />
+            * <b>CCMC</b> - Non-SDN Communist Military Companies Sanctions List <br />
             * <b>FSE</b> - Foreign Sanctions Evaders <br />
             * <b>MBS</b> - Non-SDN Menu-Based Sanctions List (NS-MBS List) <br />
             * <b>PLC</b> - Palestinian Legislative Council List <br />
@@ -57,6 +58,7 @@ paths:
               - ISN
               - DTC
               - CAP
+              - CCMC
               - FSE
               - MBS
               - PLC
